src/objects/Memo__c.object
<CustomObject>
    <fields>
        <fullName>APP_HMY__c</fullName>
        <label>APP_HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action_Status__c</fullName>
        <label>Action Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <defaultValue>&apos;Salesforce&apos;</defaultValue>
        <label>Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <referenceTo>Applications__c</referenceTo>
        <relationshipLabel>Memos</relationshipLabel>
        <relationshipName>Memos_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_HMY__c</fullName>
        <label>Contact HMY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeMilliseconds__c</fullName>
        <description>This stores the number of milliseconds since January 1 1970</description>
        <label>DateTimeMilliseconds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ErrorMemoType__c</fullName>
        <description>This is used to determine the type of error that caused the need for a memo. From this we can send out the correct letter.</description>
        <label>ErrorMemoType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PurgeUpdateFailure</fullName>
                </value>
                <value>
                    <fullName>FieldUpdateEmailFailure</fullName>
                </value>
                <value>
                    <fullName>PurgeReminderFailure</fullName>
                </value>
                <value>
                    <fullName>PurgeEmailFailure</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HMY__c</fullName>
        <externalId>true</externalId>
        <label>HMY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes / Desc</label>
        <length>1998</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notication__c</fullName>
        <label>Notication</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Showing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Rejection</fullName>
                </value>
                <value>
                    <fullName>Move in</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>A-App Status(Not Lv/wk SD)</fullName>
                </value>
                <value>
                    <fullName>A1- Out our Jurisdiction</fullName>
                </value>
                <value>
                    <fullName>B-App Status(iv/wk SD)</fullName>
                </value>
                <value>
                    <fullName>C-App Trans Received</fullName>
                </value>
                <value>
                    <fullName>D- App Trans to County</fullName>
                </value>
                <value>
                    <fullName>D1-App National City</fullName>
                </value>
                <value>
                    <fullName>D2- App Oceanside</fullName>
                </value>
                <value>
                    <fullName>D3-App Carlsbad</fullName>
                </value>
                <value>
                    <fullName>D4-App Encinitas</fullName>
                </value>
                <value>
                    <fullName>Ltr1- WL Confirmation</fullName>
                </value>
                <value>
                    <fullName>Ltr4-WL NE State</fullName>
                </value>
                <value>
                    <fullName>LtrIT-WL Ineligible to Trans</fullName>
                </value>
                <value>
                    <fullName>LtrUT-WL Unable to Trans</fullName>
                </value>
                <value>
                    <fullName>Ltr7- WL Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_To_Boomi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked by Boomi to determine if a record is to be picked up and processed.</description>
        <inlineHelpText>If the box is checked, Boomi will pull the record on the next poll.  If the box is unchecked, Boomi will not pull the record.</inlineHelpText>
        <label>Send To Boomi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_on_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Showing</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Rejection</fullName>
                </value>
                <value>
                    <fullName>Move in</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Entity Alert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wait_List_Type__c</fullName>
        <label>Wait List Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Memos</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Memo Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>